<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label1"
        android:layout_width="410dp"
        android:layout_height="108dp"
        android:background="@drawable/place1"
        android:gravity="center"
        android:text="@string/t1"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="409dp"
        android:layout_height="189dp"
        android:layout_marginTop="188dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label1">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_dark">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/i"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/quantity"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>


        <TableRow
            android:layout_width="306dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/i1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name3" />

            <EditText
                android:id="@+id/qty1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="number"
                android:text="@string/quantity1" />

        </TableRow>


        <TableRow
            android:layout_width="306dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/i2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name1" />

            <EditText
                android:id="@+id/qty2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="number"
                android:text="@string/quantity2" />

        </TableRow>

        <TableRow
            android:layout_width="306dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/i3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/item3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name2" />

            <EditText
                android:id="@+id/qty3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="number"
                android:text="@string/quantity3"/>

        </TableRow>


    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="187dp"
        android:contentDescription="@string/t2"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label1"
        app:srcCompat="@drawable/cheese" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="place_order"
        android:text="@string/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.207" />

</androidx.constraintlayout.widget.ConstraintLayout>