<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    tools:context=".order_comp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="103dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/t11"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="380dp"
        android:layout_height="566dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <TableRow
            android:layout_width="306dp"
            android:layout_height="match_parent"
            android:minHeight="60dp">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_span="2"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:text="@string/t22"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.834" />


        </TableRow>


        <TableRow
            android:layout_width="306dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/qnt1"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/q1"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/it1"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/item"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:layout_width="306dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/qnt2"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/q1"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/it2"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/item"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:layout_width="306dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/qnt3"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/q1"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/it3"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/item"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />


        </TableRow>


        <TableRow
            android:layout_width="306dp"
            android:layout_height="match_parent"
            android:minHeight="60dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_span="2"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:text="@string/t23"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.834" />


        </TableRow>

        <TableRow
            android:layout_width="306dp"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/list1"
                android:layout_width="130dp"
                android:layout_height="261dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

            <ListView
                android:id="@+id/list2"
                android:layout_width="246dp"
                android:layout_height="261dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="22dp" />


</androidx.constraintlayout.widget.ConstraintLayout>